force-app/main/default/objects/ProductCategory__c/ProductCategory__c.object-meta.xml
<CustomObject>
    <label>상품 분류</label>
    <nameField>
        <label>ProductCategory Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>