force-app/main/default/objects/ProductCategory__c/fields/co_id__c.field-meta.xml
<CustomField>
    <fullName>co_id__c</fullName>
    <label>co_id</label>
    <length>4</length>
    <type>Text</type>
</CustomField>