force-app/main/default/objects/ProductCategory__c/fields/fm_MID_CLS_NM__c.field-meta.xml
<CustomField>
    <fullName>fm_MID_CLS_NM__c</fullName>
    <formula>CASE(gd_cls_lvl_dpt__c ,
					&apos;3&apos;, ProductCategory__r.Name, 
					&apos;4&apos;, ProductCategory__r.ProductCategory__r.Name, 
					&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fm_MID_CLS_NM</label>
    <type>Text</type>
</CustomField>