force-app/main/default/objects/ProductCategory__c/fields/fm_SML_CLS_CD__c.field-meta.xml
<CustomField>
    <fullName>fm_SML_CLS_CD__c</fullName>
    <formula>CASE(gd_cls_lvl_dpt__c , &apos;4&apos;, ProductCategory__r.gd_cls_id__c, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fm_SML_CLS_CD</label>
    <type>Text</type>
</CustomField>