force-app/main/default/objects/ProductCategory__c/fields/gd_cls_id__c.field-meta.xml
<CustomField>
    <fullName>gd_cls_id__c</fullName>
    <externalId>true</externalId>
    <label>gd_cls_id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>