force-app/main/default/objects/ProductCategory__c/fields/gd_cls_lvl_dpt__c.field-meta.xml
<CustomField>
    <fullName>gd_cls_lvl_dpt__c</fullName>
    <label>gd_cls_lvl_dpt</label>
    <length>10</length>
    <type>Text</type>
</CustomField>