force-app/main/default/objects/ProductCategory__c/fields/gd_cls_nm__c.field-meta.xml
<CustomField>
    <fullName>gd_cls_nm__c</fullName>
    <label>gd_cls_nm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>