force-app/main/default/objects/ProductCategory__c/fields/ProductCategory__c.field-meta.xml
<CustomField>
    <fullName>ProductCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProductCategory</label>
    <referenceTo>ProductCategory__c</referenceTo>
    <relationshipLabel>ProductCategory</relationshipLabel>
    <relationshipName>ProductCategory</relationshipName>
    <type>Lookup</type>
</CustomField>