force-app/main/default/objects/ProductCategory__c/fields/upp_gd_cls_id__c.field-meta.xml
<CustomField>
    <fullName>upp_gd_cls_id__c</fullName>
    <label>upp_gd_cls_id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>